# vd_p

./: README.md  __init__.py  config.yaml  main.py  pyproject.toml  requirements.txt  utils.py
src/app/: __init__.py  app.py
